tests/ui/traits/next-solver/unsize-goal-mismatch-2.next.stderr
error[E0283]: type annotations needed: cannot satisfy `dyn Trait<&()>: Unsize<dyn Super<&()>>`
  --> $DIR/unsize-goal-mismatch-2.rs:15:5
   |
LL |     x
   |     ^
   |
   = note: cannot satisfy `dyn Trait<&()>: Unsize<dyn Super<&()>>`
   = note: required for `Box<dyn Trait<&()>>` to implement `CoerceUnsized<Box<dyn Super<&()>>>`
   = note: required for the cast from `Box<(dyn Trait<&'a ()> + 'static)>` to `Box<(dyn Super<&'a ()> + 'static)>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
